cmake_minimum_required(VERSION 3.8.0)
set(CMAKE_CXX_STANDARD 11)
project(tvirus)
include_directories(third_party/bsdiff)
file(GLOB srcs ./src/*.cpp ./third_party/bsdiff/*.cpp)
add_subdirectory(third_party/bsdiff)
add_executable(${PROJECT_NAME} ${srcs})
find_package(Poco REQUIRED COMPONENTS Foundation Net Zip)
if(Poco_FOUND)
  include_directories(${Poco_INCLUDE_DIRS})
  link_directories(${Poco_LIBRARY_DIRS})
  target_link_libraries(${PROJECT_NAME} ${Poco_LIBRARIES} )
endif()
find_library(bzip2 bz2)
target_link_libraries(${PROJECT_NAME} ${bzip2})
